libs/toolkit-macros-tests/tests/ui/fail/caps_not_array.rs
use toolkit_macros::module;

#[module(name="x", capabilities="rest")]
pub struct X;

fn main() {}
